# Api-Flask-Test

./: AWS ECR Steps  EKS steps  azure-pipelines-2.yml  azure-pipelines.yml  pyproject.toml
.github/workflows/: Dec3rdCI.yml  PythonCiDec1st.yml  cicdpythondec1.yml
k8s/: deployment.yml  service.yml
